test: 💍 publish test

--- a/dumi-rc-form-perf-demo/tsconfig.json
+++ b/dumi-rc-form-perf-demo/tsconfig.json
@@ -10,6 +10,7 @@
     "skipLibCheck": true,
     "declaration": true,
     "resolveJsonModule": true,
+    "noEmit": true,
     "allowImportingTsExtensions": true
   }
 }
